--- a/front-end/src/pages/AdminPage/admin-page.scss
+++ b/front-end/src/pages/AdminPage/admin-page.scss
@@ -1,3 +1,5 @@
+// src/pages/AdminPage/admin-page.scss
+
 .admin-page-main {
   min-height: 100vh;
   width: 100vw;
@@ -5,7 +7,7 @@
   justify-content: center;
   align-items: flex-start;
   background: #f9fafd;
-  padding-top: 4.8rem; // Space for navbar
+  padding-top: 0;
 }
 
 .admin-page-content {
@@ -20,6 +22,8 @@
   display: flex;
   flex-direction: column;
   gap: 2.5rem;
+  /* Add top padding for navbar, overridden for mobile below */
+  padding-top: 90px;
 }
 
 /* Tablet adjustments */
@@ -29,22 +33,21 @@
     padding: 1.3rem 1rem;
     border-radius: 13px;
     gap: 1.3rem;
-  }
-  .admin-page-main {
-    padding-top: 3.5rem;
+    padding-top: 70px;
   }
 }
 
 /* Mobile adjustments */
-@media (max-width: 600px) {
-  .admin-page-main {
-    padding-top: 2.3rem;
-  }
+@media (max-width: 700px) {
   .admin-page-content {
     padding: 0.7rem 0.3rem;
+    padding-top: 75px; /* Make sure this is at least your mobile navbar height */
     border-radius: 7px;
     min-height: 60vh;
     box-shadow: 0 2px 13px 0 rgba(60, 80, 100, 0.08);
     gap: 0.7rem;
+    width: 100vw;
+    max-width: 100vw;
+    box-sizing: border-box;
   }
 }
