--- a/front-end/src/pages/UserDashboardPage/user-dashboard-page.scss
+++ b/front-end/src/pages/UserDashboardPage/user-dashboard-page.scss
@@ -1,7 +1,6 @@
-// --- Container & Layout
 .user-dashboard-container {
   min-height: 100vh;
-  padding: 104px 1rem 2rem 1rem; // 104px top padding to account for fixed navbar height
+  padding: 104px 1rem 2rem 1rem; 
   box-sizing: border-box;
   background: #f8fafb;
   display: flex;
@@ -9,7 +8,6 @@
   align-items: center;
 }
 
-// --- Top Block: Avatar + Stats
 .ud-block-1 {
   width: 100%;
   max-width: 1050px;
@@ -131,7 +129,6 @@
   overflow-x: auto;
 }
 
-// Responsive Stacking
 @media (max-width: 1050px) {
   .ud-block-1 {
     flex-direction: column;
